dynamically set swagger host from gin context; adds api definition of listGameServers
